src/snapshots/ebnf__parser__test__multiple_underscores.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= a_b_cat;\n         a_b_cat ::= 'a' | 'b';\n     "
- - lhs: filter
    rhs:
      NonTerminal:
        - a_b_cat
        - name: ""
  - lhs: a_b_cat
    rhs:
      Alternation:
        - Terminal:
            - a
            - name: ""
        - Terminal:
            - b
            - name: ""
        - name: ""

