src/snapshots/ebnf__parser__test__simple_alternation.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= a | b;\n         a ::= 'a';\n         b ::= 'b';\n     "
- - lhs: filter
    rhs:
      Alternation:
        - NonTerminal:
            - a
            - name: ""
        - NonTerminal:
            - b
            - name: ""
        - name: ""
  - lhs: a
    rhs:
      Terminal:
        - a
        - name: ""
  - lhs: b
    rhs:
      Terminal:
        - b
        - name: ""

