src/snapshots/ebnf__parser__test__underscore.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= a_b;\n         a_b ::= 'a' | 'b';\n     "
- - lhs: filter
    rhs:
      NonTerminal:
        - a_b
        - name: ""
  - lhs: a_b
    rhs:
      Alternation:
        - Terminal:
            - a
            - name: ""
        - Terminal:
            - b
            - name: ""
        - name: ""

